--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-practice",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bmigueldev.github.io/wordle-clone",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
