Fix keydown event not activating shortcuts
- Fix keyboard keydown event not activating for F5 and other keyboard shortcuts. Maintain button mouse click not being able to propagate to other browser/shortcut functions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-practice",
+  "name": "wordle-clone",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bmigueldev.github.io/wordle-clone",
